# misc_scripts

./: README.md  atu  backup_robinhood_mongo.sh  encrypt-rename.sh  maildir_gdrive_backup.bash  mysqldump_gdrive_backup.bash  plausible_sites_reorder.js  prove.sh  screenshot  wifi_strength.sh
ameotrack/: Pipfile  setup.py
ameotrack-rust/: Cargo.toml
ameotrack-rust/src/: main.rs
ameotrack/ameotrack/: __main__.py  config.py
ameotrack/ameotrack.egg-info/: PKG-INFO
encrypt/: encrypt-rename.sh
gallery/: .eslintrc  index.js  manifest.json  package.json  style.css
osrsbot-trading/: package.json
osrsbot-trading/public/: index.html
osrsbot-trading/src/: App.tsx  ItemsTable.tsx
osutrack-exporter/: Dockerfile  Justfile  main.py  requirements.txt
osutrack_deduper/: .gitignore  conf.example.js  dedupUser.js  index.js  package.json
pinger/: README.md  pingToFile.sh  processPing.awk
pr-log/: setup.py
pr-log/pr_log/: __main__.py
pr-log/pr_log.egg-info/: PKG-INFO
st3-cursor-color/: Cargo.toml  README.md  run.sh
st3-cursor-color/src/: main.rs  xml_parsing.rs
