[package]
name = "ameotrack"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
clap = { version = "4.5.9", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
humantime = "2.1"
shellexpand = "3.0"
colored = "2.0"
regex = "1.5"
lazy_static = "1.4"
